add Run test pipeline